# applemusicxspotify

./: .gitignore  README.md  pyproject.toml
examples/: alice.json  bob.json  carol.json
src/blend/: __init__.py  apple.py  blend.py  cli.py  match.py  playlist.py  profile.py  spotify.py  web.py
tests/: test_apple.py  test_blend.py  test_cli.py  test_group.py  test_match.py  test_playlist.py  test_profile.py  test_spotify.py  test_transfer.py  test_web.py
