[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blend"
version = "0.3.0"
description = "A cross-platform music blend for the pairs Spotify won't do — Apple×Apple and Spotify×Apple."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "s-eun-young-g" }]
keywords = ["spotify", "apple-music", "blend", "playlist", "music"]

[project.urls]
Homepage = "https://github.com/s-eun-young-g/applemusicxspotify"

[project.scripts]
blend = "blend.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
